[package]
name = "linenoise-rs"
version = "0.1.1"
homepage = "https://github.com/parazyd/linenoise-rs/"
description = "Guerilla like editing library"
authors = ["parazyd <parazyd@dyne.org>"]
repository = "https://github.com/parazyd/linenoise-rs"
license = "BSD-2-Clause"
edition = "2024"

[dependencies]
lazy_static = "1.5"
libc = "0.2"

[[example]]
name = "linenoise"
path = "linenoise-example.rs"
